--- a/.github/workflows/firebase-emulator-test.yml
+++ b/.github/workflows/firebase-emulator-test.yml
@@ -1,1 +1,42 @@
+name: Backend Emulator Tests
 
+on:
+  push:
+    branches: [main]
+    paths: ['backend/**']
+  pull_request:
+    branches: [main]
+    paths: ['backend/**']
+
+jobs:
+  test:
+    runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: backend
+    
+    env:
+      FIREBASE_PROJECT_ID: groundctrl-staging
+      FIREBASE_AUTH_EMULATOR_HOST: localhost:9099
+      FIRESTORE_EMULATOR_HOST: localhost:8080
+      API_BASE_URL: https://api-staging.missionctrl.app/api
+
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+      
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '20'
+          cache: 'npm'
+          cache-dependency-path: backend/package-lock.json
+      
+      - name: Install backend dependencies
+        run: npm ci
+      
+      - name: Install Firebase Tools
+        run: npm install -g firebase-tools
+      
+      - name: Start Firebase Emulators & Run Tests
+        run: firebase emulators:exec --project ${{ env.FIREBASE_PROJECT_ID }} --only auth,firestore "npm test"
