--- a/backend/package.json
+++ b/backend/package.json
@@ -8,6 +8,8 @@
     "dev": "nodemon src/server.js",
     "test": "jest --coverage",
     "test:watch": "jest --watch",
+    "test:local": "firebase emulators:exec --only auth,firestore \"npm test\"",
+    "emulators:start": "firebase emulators:start --only auth,firestore",
     "lint": "eslint src/**/*.js",
     "lint:fix": "eslint src/**/*.js --fix",
     "cleanup": "node src/scripts/FB_cleanup.js"
