--- a/backend/package.json
+++ b/backend/package.json
@@ -10,7 +10,9 @@
     "test:watch": "jest --watch",
     "lint": "eslint src/**/*.js",
     "lint:fix": "eslint src/**/*.js --fix",
-    "cleanup": "node src/scripts/FB_cleanup.js"
+    "cleanup": "node src/scripts/FB_cleanup.js",
+    "emulators:start": "firebase emulators:start --only auth,firestore",
+    "test:local": "firebase emulators:exec --only auth,firestore \"npm test\""
   },
   "keywords": [
     "satellite",
@@ -38,6 +40,7 @@
     "@eslint/js": "^9.39.2",
     "@types/jest": "^29.5.11",
     "eslint": "^9.39.2",
+    "firebase-tools": "^13.6.0",
     "globals": "^16.5.0",
     "jest": "^30.2.0",
     "nodemon": "^3.0.2"
