--- a/backend/package.json
+++ b/backend/package.json
@@ -30,6 +30,7 @@
     "express": "^4.18.2",
     "express-rate-limit": "^7.1.5",
     "firebase-admin": "^12.0.0",
+    "helmet": "^8.1.0",
     "js-yaml": "^4.1.0",
     "jsonwebtoken": "^9.0.2",
     "swagger-jsdoc": "^6.2.8",
@@ -60,8 +61,12 @@
   },
   "jest": {
     "testEnvironment": "node",
-    "setupFilesAfterEnv": ["<rootDir>/tests-backend/setup.js"],
-    "testMatch": ["**/tests-backend/**/*.test.js"],
+    "setupFilesAfterEnv": [
+      "<rootDir>/tests-backend/setup.js"
+    ],
+    "testMatch": [
+      "**/tests-backend/**/*.test.js"
+    ],
     "collectCoverageFrom": [
       "src/**/*.js",
       "!src/server.js"
