--- a/backend/.env.sample
+++ b/backend/.env.sample
@@ -33,9 +33,13 @@ FIREBASE_CLIENT_EMAIL=firebase-adminsdk@your-project.iam.gserviceaccount.com
 FIREBASE_WEB_API_KEY=your-web-api-key-from-firebase-console
 
 # Firebase Emulator Configuration (for local development and testing)
-# Comment out these lines when deploying to production
-FIREBASE_AUTH_EMULATOR_HOST=localhost:9099
-FIRESTORE_EMULATOR_HOST=localhost:8080
+# ⚠️ CRITICAL: These variables are ONLY for local development
+# ⚠️ DO NOT set these in production (apphosting.yaml or Cloud Run environment)
+# ⚠️ The application will fail to start if these are set when NODE_ENV=production
+# 
+# For local development with emulators, uncomment these lines:
+# FIREBASE_AUTH_EMULATOR_HOST=localhost:9099
+# FIRESTORE_EMULATOR_HOST=localhost:8080
 
 # JWT Configuration [SECRET - use Secret Manager in production]
 JWT_SECRET=your-super-secret-jwt-key-minimum-64-characters-long-for-production
