--- a/.github/workflows/firebase-hosting-pull-request.yml
+++ b/.github/workflows/firebase-hosting-pull-request.yml
@@ -4,6 +4,7 @@
 name: Deploy to Firebase Hosting on PR
 on: pull_request
 permissions:
+  checks: write        # Required for Firebase action to create check runs
   contents: read
   pull-requests: write
 jobs:
