--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -6,14 +6,23 @@ on:
   push:
     branches:
       - main
+
+# Only run one production deployment at a time
+concurrency:
+  group: production-deployment
+  cancel-in-progress: false
+
 jobs:
   build_and_deploy:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+      
       - uses: actions/setup-node@v4
         with:
           node-version: '20'
+          cache: 'npm'
+          cache-dependency-path: frontend/package-lock.json
       
       - name: Install frontend dependencies
         working-directory: ./frontend
@@ -22,6 +31,18 @@ jobs:
       - name: Build frontend
         working-directory: ./frontend
         run: npm run build
+        env:
+          NODE_ENV: production
+      
+      - name: Verify build output
+        working-directory: ./frontend
+        run: |
+          if [ ! -d "dist" ]; then
+            echo "❌ Error: dist directory not found"
+            exit 1
+          fi
+          echo "✅ Build output verified"
+          echo "📦 Build size: $(du -sh dist | cut -f1)"
       
       - name: Deploy to Firebase Hosting (Production)
         id: firebase_deploy
@@ -32,16 +53,153 @@ jobs:
           channelId: live
           projectId: groundctrl-c8860
       
+      - name: Extract deployment URL
+        id: extract_url
+        if: success()
+        run: |
+          echo "production_url=https://groundctrl-c8860.web.app" >> $GITHUB_OUTPUT
+          echo "deployment_time=$(date -u +"%Y-%m-%d %H:%M:%S UTC")" >> $GITHUB_OUTPUT
+      
+      - name: Create deployment success comment
+        if: success()
+        uses: actions/github-script@v7
+        with:
+          script: |
+            const commit = context.payload.head_commit;
+            const body = `🚀 **Production Deployment Successful!**
+
+            🔗 **Live URL:** ${{ steps.extract_url.outputs.production_url }}
+
+            📊 **Deployment Details:**
+            - **Status:** ✅ Deployed to production
+            - **Branch:** \`${context.ref.replace('refs/heads/', '')}\`
+            - **Commit:** [\`${context.sha.substring(0, 7)}\`](${{ github.server_url }}/${{ github.repository }}/commit/${context.sha})
+            - **Time:** ${{ steps.extract_url.outputs.deployment_time }}
+            - **Triggered by:** @${context.actor}
+
+            📝 **Commit Message:**
+            > ${commit?.message || 'N/A'}
+
+            🔍 **Workflow:** [View logs](${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }})`;
+
+            // Try to find related PR and comment there
+            const { data: prs } = await github.rest.repos.listPullRequests({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              state: 'closed',
+              sort: 'updated',
+              direction: 'desc',
+              per_page: 10
+            });
+
+            const relatedPR = prs.find(pr => 
+              pr.merge_commit_sha === context.sha || 
+              pr.merged_at && new Date(pr.merged_at) > new Date(Date.now() - 300000) // within last 5 minutes
+            );
+
+            if (relatedPR) {
+              await github.rest.issues.createComment({
+                owner: context.repo.owner,
+                repo: context.repo.repo,
+                issue_number: relatedPR.number,
+                body: body
+              });
+              console.log(`✅ Posted deployment success to PR #${relatedPR.number}`);
+            } else {
+              console.log('ℹ️ No recent PR found to comment on');
+            }
+      
       - name: Create GitHub Issue on Deployment Failure
         if: failure()
         uses: actions/github-script@v7
         with:
           script: |
+            const commit = context.payload.head_commit;
+            const failedStep = '${{ job.status }}';
+            
             const issue = await github.rest.issues.create({
               owner: context.repo.owner,
               repo: context.repo.repo,
               title: `🚨 Production Deployment Failed - ${new Date().toISOString().split('T')[0]}`,
-              body: `## Production Deployment Failure\n\n**Workflow Run:** [View Logs](${context.serverUrl}/${context.repo.owner}/${context.repo.repo}/actions/runs/${context.runId})\n\n**Branch:** \`${context.ref}\`\n**Commit:** ${context.sha}\n**Commit Message:** ${context.payload.head_commit?.message || 'N/A'}\n\n**Build Status:** ${context.job.status}\n\n### Actions Required:\n1. Review the workflow logs for error details\n2. Check if Firebase service account secret is properly configured\n3. Verify the build completed successfully\n4. Check Firebase Console for any project issues\n\n### Troubleshooting:\n- Ensure \`FIREBASE_SERVICE_ACCOUNT\` secret is configured\n- Verify the secret has proper permissions\n- Check that the Firebase project is active\n- Review recent changes in the commit\n\nSee \`PRODUCTION_DEPLOYMENT.md\` for deployment guidelines.`,
-              labels: ['deployment-failure', 'urgent', 'production']
-            })
-            console.log(`Created issue #${issue.data.number}`)
+              body: `## 🔴 Production Deployment Failure
+
+            **⚠️ URGENT: Production deployment has failed and requires immediate attention.**
+
+            ### 📋 Deployment Information
+            - **Workflow Run:** [View Logs](${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }})
+            - **Branch:** \`${context.ref.replace('refs/heads/', '')}\`
+            - **Commit:** [\`${context.sha.substring(0, 7)}\`](${{ github.server_url }}/${{ github.repository }}/commit/${context.sha})
+            - **Triggered by:** @${context.actor}
+            - **Time:** ${new Date().toISOString()}
+            - **Status:** ${failedStep}
+
+            ### 📝 Commit Details
+            **Message:** ${commit?.message || 'N/A'}
+            **Author:** ${commit?.author?.name || 'N/A'}
+
+            ### 🔍 Troubleshooting Steps
+
+            1. **Review Workflow Logs**
+               - Check the [workflow run](${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}) for specific error messages
+               - Look for build failures, authentication issues, or deployment errors
+
+            2. **Verify Configuration**
+               - Ensure \`FIREBASE_SERVICE_ACCOUNT\` secret is properly configured
+               - Verify the secret has not expired and has proper permissions
+               - Check Firebase project status and billing
+
+            3. **Check Build**
+               - Verify frontend build completes successfully
+               - Check for any dependency issues or breaking changes
+               - Ensure \`dist\` directory is created
+
+            4. **Firebase Console**
+               - Check [Firebase Console](https://console.firebase.google.com/project/groundctrl-c8860)
+               - Verify project is active and hosting is enabled
+               - Check for any service disruptions
+
+            ### 📚 Resources
+            - See \`PRODUCTION_DEPLOYMENT.md\` for deployment guidelines
+            - [Firebase Hosting Documentation](https://firebase.google.com/docs/hosting)
+            - [GitHub Actions Troubleshooting](https://docs.github.com/en/actions/monitoring-and-troubleshooting-workflows)
+
+            ### ✅ Resolution Checklist
+            - [ ] Reviewed workflow logs and identified root cause
+            - [ ] Fixed the underlying issue
+            - [ ] Tested changes locally or in preview
+            - [ ] Re-run deployment or merge fix
+            - [ ] Verified production site is working
+            - [ ] Close this issue
+
+            ---
+            **Assigned to:** @${context.actor}`,
+              labels: ['deployment-failure', 'urgent', 'production', 'bug'],
+              assignees: [context.actor]
+            });
+            
+            console.log(`✅ Created issue #${issue.data.number}`);
+            
+            // Try to comment on related PR if exists
+            const { data: prs } = await github.rest.repos.listPullRequests({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              state: 'closed',
+              sort: 'updated',
+              direction: 'desc',
+              per_page: 10
+            });
+
+            const relatedPR = prs.find(pr => 
+              pr.merge_commit_sha === context.sha || 
+              pr.merged_at && new Date(pr.merged_at) > new Date(Date.now() - 300000)
+            );
+
+            if (relatedPR) {
+              await github.rest.issues.createComment({
+                owner: context.repo.owner,
+                repo: context.repo.repo,
+                issue_number: relatedPR.number,
+                body: `🔴 **Production deployment failed!**\n\nAn issue has been created: #${issue.data.number}\nPlease review the [workflow logs](${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}) for details.`
+              });
+              console.log(`✅ Posted failure notice to PR #${relatedPR.number}`);
+            }
