feat: Implement session tracking and state persistence

--- a/backend/.env.sample
+++ b/backend/.env.sample
@@ -22,7 +22,7 @@
 # ============================================================================
 
 # Server Configuration
-PORT=3001
+PORT=8080
 NODE_ENV=development
 CALL_SIGN=GROUNDCTRL-01
 
@@ -51,7 +51,7 @@ JWT_ACCESS_TOKEN_EXPIRY=15m
 JWT_REFRESH_TOKEN_EXPIRY=7d
 
 # CORS Configuration
-ALLOWED_ORIGINS=http://localhost:3001,http://localhost:5173
+ALLOWED_ORIGINS=http://localhost:5173,https://missionctrl.org
 
 # HTTP Client Configuration
 HTTP_CLIENT_TIMEOUT_MS=8000
@@ -78,9 +78,9 @@ SMTP_PORT=587
 SMTP_USER=noreply@example.com
 SMTP_PASSWORD=your-smtp-password
 
-# URL Configuration
+# URL Configuration (Production)
 # For Firebase App Hosting, the backend URL format is:
 # https://<backend-name>--<project-id>.<region>.hosted.app
 # Example: https://groundctrl--groundctrl-c8860.us-central1.hosted.app
-FRONTEND_URL=https://your-frontend-domain.com
-BACKEND_URL=https://your-backend-name--your-project-id.us-central1.hosted.app
+FRONTEND_URL=https://missionctrl.org
+BACKEND_URL=https://api.missionctrl.org
