--- a/.github/workflows/firebase-emulator-test.yml
+++ b/.github/workflows/firebase-emulator-test.yml
@@ -1,29 +1,55 @@
 name: Firebase Emulator Tests
-on: pull_request
+
+on:
+  pull_request:
+    branches: [main, sprint2tests]
+    paths:
+      - 'backend/**'
+      - 'firebase.json'
+      - '.firebaserc'
+  push:
+    branches: [main]
+    paths:
+      - 'backend/**'
 
 jobs:
   test:
     runs-on: ubuntu-latest
+    
+    defaults:
+      run:
+        working-directory: backend
+    
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout code
+        uses: actions/checkout@v3
       
-      - uses: actions/setup-node@v4
+      - name: Setup Node.js
+        uses: actions/setup-node@v3
         with:
-          node-version: '20'
+          node-version: '18'
+          cache: 'npm'
+          cache-dependency-path: backend/package-lock.json
       
-      - name: Install backend dependencies
-        working-directory: ./backend
+      - name: Install dependencies
         run: npm ci
       
-      - name: Run sanity tests
-        working-directory: ./backend
-        run: npx jest tests-backend/sanity.test.js
+      - name: Setup Firebase CLI
+        run: npm install -g firebase-tools
+      
+      - name: Run linter
+        run: npm run lint
+      
+      - name: Start Firebase Emulators and run tests
+        run: |
+          firebase emulators:exec --only auth,firestore --project demo-test "npm test" || exit 1
         env:
           NODE_ENV: test
+          SUPPRESS_TEST_LOGS: true
       
-      - name: Validate backend structure
-        working-directory: ./backend
-        run: |
-          echo "✓ Backend dependencies installed successfully"
-          echo "✓ Sanity tests passed"
-          echo "✓ PR checks completed successfully"
+      - name: Upload test results
+        if: always()
+        uses: actions/upload-artifact@v3
+        with:
+          name: test-results
+          path: backend/coverage/
