--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -23,6 +23,11 @@ coverage/
 .nyc_output/
 *.test.js.snap
 
+# Test directories
+tests-backend/
+coverage/
+.nyc_output/
+
 # Build outputs
 dist/
 build/
