Refactor integration tests to use test helper for app initialization and improve emulator compatibility
- Updated satellite, user, authentication, and performance tests to utilize `getTestApp` for consistent app initialization.
- Increased timeout for tests to accommodate Firebase emulator readiness.
- Enhanced error handling and validation in tests for user registration and command execution.
- Adjusted rate limiting configurations for testing environments to prevent failures.
- Improved assertions in injection prevention tests to ensure proper error messages are returned.
- Updated Firebase configuration in tests to use `127.0.0.1` instead of `localhost` for better compatibility.
- Added a new `.env.test` file for test environment configuration with appropriate settings.

--- a/firebase.json
+++ b/firebase.json
@@ -1,6 +1,6 @@
 {
   "projects": {
-    "default": "test-project"
+    "default": "groundctrl-c8860"
   },
   "firestore": {
     "rules": "firestore.rules",
