fix: add JWT_SECRET environment variable to test configuration
- Add JWT_SECRET to backend/tests/setup.js for local test runs
- Add JWT_SECRET to GitHub Actions workflow environment variables
- This fixes all 22 test failures caused by missing JWT secret during token generation
- Tests were failing at POST /api/v1/auth/register with 500 errors
- Root cause: jwt.sign() requires secretOrPrivateKey which was undefined

--- a/.github/workflows/firebase-emulator-test.yml
+++ b/.github/workflows/firebase-emulator-test.yml
@@ -102,6 +102,7 @@ jobs:
           NODE_ENV: test
           FIREBASE_AUTH_EMULATOR_HOST: 127.0.0.1:9099
           FIRESTORE_EMULATOR_HOST: 127.0.0.1:8080
+          JWT_SECRET: 'test-secret-key-for-ci-testing-only-do-not-use-in-production'
       
       - name: Stop emulators
         if: always()
