fix: add security-events permission for CodeQL integration in workflow files

--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -16,6 +16,7 @@ permissions:
   contents: read
   issues: write
   pull-requests: write
+  security-events: read  # Required for CodeQL integration
 
 jobs:
   build_and_deploy:
