--- a/.github/workflows/firebase-emulator-test.yml
+++ b/.github/workflows/firebase-emulator-test.yml
@@ -23,6 +23,7 @@ permissions:
   contents: read
   pull-requests: write
   actions: read
+  security-events: read  # Required for CodeQL integration
 
 jobs:
   test:
