Fix: Add GEMINI_API_KEY configuration for NOVA AI

--- a/backend/.env.sample
+++ b/backend/.env.sample
@@ -78,6 +78,11 @@ SMTP_PORT=587
 SMTP_USER=noreply@example.com
 SMTP_PASSWORD=your-smtp-password
 
+# Gemini AI Configuration [SECRET - use Secret Manager in production]
+# Get your API key from: https://makersuite.google.com/app/apikey
+# Without this key, NOVA will use fallback responses
+GEMINI_API_KEY=your-gemini-api-key-here
+
 # URL Configuration (Production)
 # For Firebase App Hosting, the backend URL format is:
 # https://<backend-name>--<project-id>.<region>.hosted.app
