e2e frontend tests and github workflows

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,7 +9,12 @@
     "build:check": "tsc && vite build",
     "preview": "vite preview",
     "lint": "eslint .",
-    "deploy": "npm run build && firebase deploy"
+    "deploy": "npm run build && firebase deploy",
+    "test:e2e": "playwright test",
+    "test:e2e:headed": "playwright test --headed",
+    "test:e2e:debug": "playwright test --debug",
+    "test:e2e:ui": "playwright test --ui",
+    "test:e2e:report": "playwright show-report"
   },
   "dependencies": {
     "@fontsource/geist-mono": "^5.0.0",
