--- a/.github/workflows/firebase-hosting-pull-request.yml
+++ b/.github/workflows/firebase-hosting-pull-request.yml
@@ -31,6 +31,28 @@ jobs:
         working-directory: ./frontend
         run: npm install
       
+      - name: Install Playwright browsers (for E2E tests)
+        working-directory: ./frontend
+        run: npx playwright install --with-deps chromium
+        continue-on-error: true
+      
+      - name: Run E2E tests (optional)
+        working-directory: ./frontend
+        run: npm run test:e2e
+        continue-on-error: true
+        env:
+          CI: true
+          PLAYWRIGHT_BASE_URL: http://localhost:5173
+      
+      - name: Upload E2E test results
+        if: always()
+        uses: actions/upload-artifact@v4
+        continue-on-error: true
+        with:
+          name: e2e-test-results-pr-${{ github.event.pull_request.number }}
+          path: frontend/test-results/
+          retention-days: 7
+      
       - name: Build frontend
         working-directory: ./frontend
         run: npm run build
