--- a/.github/workflows/firebase-hosting-pull-request.yml
+++ b/.github/workflows/firebase-hosting-pull-request.yml
@@ -36,9 +36,28 @@ jobs:
         run: npx playwright install --with-deps chromium
         continue-on-error: true
       
+      - name: Start dev server
+        working-directory: ./frontend
+        run: |
+          npm run dev -- --host 0.0.0.0 --port 5173 &
+          sleep 15
+      
       - name: Run E2E tests (optional)
         working-directory: ./frontend
-        run: npm run test:e2e
+        run: |
+          for attempt in {1..3}; do
+            echo "E2E Test Attempt $attempt"
+            npm run test:e2e
+            exit_code=$?
+            if [ $exit_code -eq 0 ]; then
+              break
+            fi
+            if [ $attempt -lt 3 ]; then
+              echo "Test attempt $attempt failed, retrying..."
+              sleep 5
+            fi
+          done
+          exit $exit_code
         continue-on-error: true
         env:
           CI: true
