--- a/.github/workflows/firebase-hosting-pull-request.yml
+++ b/.github/workflows/firebase-hosting-pull-request.yml
@@ -31,41 +31,6 @@ jobs:
         working-directory: ./frontend
         run: npm install
       
-      - name: Install Playwright browsers (for E2E tests)
-        working-directory: ./frontend
-        run: npx playwright install --with-deps chromium
-        continue-on-error: true
-      
-      - name: Run E2E tests (optional)
-        working-directory: ./frontend
-        run: |
-          for attempt in {1..3}; do
-            echo "E2E Test Attempt $attempt"
-            npm run test:e2e
-            exit_code=$?
-            if [ $exit_code -eq 0 ]; then
-              break
-            fi
-            if [ $attempt -lt 3 ]; then
-              echo "Test attempt $attempt failed, retrying..."
-              sleep 5
-            fi
-          done
-          exit $exit_code
-        continue-on-error: true
-        env:
-          CI: true
-          PLAYWRIGHT_BASE_URL: http://localhost:5173
-      
-      - name: Upload E2E test results
-        if: always()
-        uses: actions/upload-artifact@v4
-        continue-on-error: true
-        with:
-          name: e2e-test-results-pr-${{ github.event.pull_request.number }}
-          path: frontend/test-results/
-          retention-days: 7
-      
       - name: Build frontend
         working-directory: ./frontend
         run: npm run build
@@ -114,6 +79,43 @@ jobs:
             echo "preview_url=https://groundctrl-c8860.web.app" >> $GITHUB_OUTPUT
             echo "deployment_status=unknown" >> $GITHUB_OUTPUT
           fi
+      
+      - name: Install Playwright browsers (for E2E tests)
+        if: steps.check_secret.outputs.secret_configured == 'true' && steps.extract_url.outputs.deployment_status == 'success'
+        working-directory: ./frontend
+        run: npx playwright install --with-deps chromium
+        continue-on-error: true
+      
+      - name: Run E2E tests against deployed preview
+        if: steps.check_secret.outputs.secret_configured == 'true' && steps.extract_url.outputs.deployment_status == 'success'
+        working-directory: ./frontend
+        run: |
+          for attempt in {1..3}; do
+            echo "E2E Test Attempt $attempt against ${{ steps.extract_url.outputs.preview_url }}"
+            npm run test:e2e
+            exit_code=$?
+            if [ $exit_code -eq 0 ]; then
+              break
+            fi
+            if [ $attempt -lt 3 ]; then
+              echo "Test attempt $attempt failed, retrying..."
+              sleep 10
+            fi
+          done
+          exit $exit_code
+        continue-on-error: true
+        env:
+          CI: true
+          PLAYWRIGHT_BASE_URL: ${{ steps.extract_url.outputs.preview_url }}
+      
+      - name: Upload E2E test results
+        if: always() && steps.check_secret.outputs.secret_configured == 'true'
+        uses: actions/upload-artifact@v4
+        continue-on-error: true
+        with:
+          name: e2e-test-results-pr-${{ github.event.pull_request.number }}
+          path: frontend/test-results/
+          retention-days: 7
       
       - name: Comment on PR - Deployment Success
         if: steps.check_secret.outputs.secret_configured == 'true' && steps.extract_url.outputs.deployment_status == 'success'
