--- a/.github/workflows/firebase-emulator-test.yml
+++ b/.github/workflows/firebase-emulator-test.yml
@@ -47,6 +47,10 @@ jobs:
       - name: Install dependencies
         run: npm ci
       
+      - name: Run security audit
+        run: npm audit --audit-level=high
+        continue-on-error: true  # Don't fail build on audit warnings, but log them
+      
       - name: Setup Firebase CLI
         run: npm install -g firebase-tools
       
