--- a/backend/package.json
+++ b/backend/package.json
@@ -66,6 +66,7 @@
   },
   "overrides": {
     "glob": "^10.0.0",
+    "fast-xml-parser": ">=5.3.4",
     "z-schema": {
       ".": "^6.0.0",
       "lodash.get": "npm:lodash@^4.17.21",
