--- a/.github/workflows/frontend-e2e-tests.yml
+++ b/.github/workflows/frontend-e2e-tests.yml
@@ -70,7 +70,7 @@ jobs:
       - name: Wait for backend to be ready
         run: |
           echo "Waiting for backend API to be ready..."
-          npx wait-on --timeout 60000 http://localhost:3001/api/v1/help/categories || echo "Backend health check timed out, continuing anyway"
+          npx wait-on --timeout 120000 http://localhost:3001/api/v1/health || echo "Backend health check timed out, continuing anyway"
       
       - name: Install Playwright browsers
         working-directory: ./frontend
