--- a/firebase.json
+++ b/firebase.json
@@ -22,7 +22,7 @@
         "headers": [
           {
             "key": "Content-Security-Policy",
-            "value": "default-src 'self'; script-src 'self'; style-src 'self' 'unsafe-inline'; img-src 'self' data: https:; connect-src 'self' https://*.googleapis.com https://*.firebaseapp.com https://*.firebase.com wss://*.firebaseapp.com wss://*.firebase.com https://*.socket.io wss://*.socket.io; frame-ancestors 'self';"
+            "value": "default-src 'self'; script-src 'self'; style-src 'self' 'unsafe-inline'; img-src 'self' data: https:; connect-src 'self' https://*.googleapis.com https://*.firebaseapp.com https://*.firebase.com wss://*.firebaseapp.com wss://*.firebase.com https://*.socket.io wss://*.socket.io https://api.missionctrl.org wss://api.missionctrl.org; frame-ancestors 'self';"
           },
           { "key": "X-Frame-Options", "value": "SAMEORIGIN" },
           { "key": "X-Content-Type-Options", "value": "nosniff" },
