--- a/frontend/.env.production
+++ b/frontend/.env.production
@@ -2,7 +2,7 @@
 # This file is used when building for production deployment
 
 # API Configuration (Production)
-VITE_API_URL=https://api.missionctrl.org
+VITE_API_BASE_URL=https://groundctrl--groundctrl-c8860.us-central1.hosted.app/api/v1
 
 # Firebase Configuration (Production)
 VITE_FIREBASE_API_KEY=AIzaSyC5lq5EgmFfKXSCSu68r6ZbSR2TH7lMdSI
