--- a/backend/package.json
+++ b/backend/package.json
@@ -20,7 +20,7 @@
     "test:debug": "node check-files.js && jest --runInBand --detectOpenHandles",
     "test:emulator": "firebase emulators:exec --only auth,firestore \"npm test\"",
     "lint": "biome check src",
-    "lint:fix": "biome check --write src",
+    "lint:fix": "biome check src --write",
     "seed": "node seeders/seed.js",
     "cleanup": "node src/scripts/FB_cleanup.js",
     "test:verify-migration": "node tests/scripts/verify-migration.js",
