--- a/frontend/firebase.json
+++ b/frontend/firebase.json
@@ -45,7 +45,7 @@
         "headers": [
           {
             "key": "Content-Security-Policy",
-            "value": "default-src 'self'; script-src 'self' 'unsafe-inline' https://static.cloudflareinsights.com; connect-src 'self' https://api.missionctrl.org wss://api.missionctrl.org https://*.googleapis.com https://*.firebaseio.com https://*.firebaseapp.com https://*.firebase.com wss://*.firebaseapp.com wss://*.firebase.com https://*.socket.io wss://*.socket.io; font-src 'self' https://fonts.gstatic.com data:; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; img-src 'self' data: https:; frame-src 'self' https://*.firebaseapp.com;"
+            "value": "default-src 'self'; script-src 'self' https://static.cloudflareinsights.com 'wasm-unsafe-eval'; connect-src 'self' https://groundctrl--groundctrl-c8860.us-central1.hosted.app https://*.googleapis.com https://*.firebaseapp.com https://*.firebase.com https://*.firebaseio.com wss://*.firebaseio.com wss://*.firebaseapp.com https://*.socket.io wss://*.socket.io https://api.missionctrl.org wss://api.missionctrl.org; font-src 'self' data: https://fonts.gstatic.com https://fonts.googleapis.com; style-src 'self' 'unsafe-inline'; img-src 'self' data: blob: https://*.googleapis.com https://firebasestorage.googleapis.com; object-src 'none'; base-uri 'self'; form-action 'self'; frame-ancestors 'none'; upgrade-insecure-requests;"
           }
         ]
       }
