--- a/frontend/package.json
+++ b/frontend/package.json
@@ -49,6 +49,9 @@
     "@radix-ui/react-toggle": "^1.1.10",
     "@radix-ui/react-toggle-group": "^1.1.11",
     "@radix-ui/react-tooltip": "^1.2.8",
+    "@react-three/drei": "^10.7.7",
+    "@react-three/fiber": "^9.5.0",
+    "@react-three/postprocessing": "^3.0.4",
     "autoprefixer": "^10.4.24",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -66,7 +69,9 @@
     "react-helmet-async": "^2.0.5",
     "react-hook-form": "^7.71.1",
     "react-resizable-panels": "^4.6.2",
+    "react-rnd": "^10.5.2",
     "react-router-dom": "^7.13.0",
+    "react-window": "^2.2.6",
     "recharts": "^3.7.0",
     "socket.io-client": "^4.8.3",
     "sonner": "^2.0.7",
