--- a/.github/workflows/firebase-hosting-pull-request.yml
+++ b/.github/workflows/firebase-hosting-pull-request.yml
@@ -63,13 +63,11 @@ jobs:
       - name: Deploy to Firebase Hosting Preview
         id: firebase_deploy
         if: steps.check_secret.outputs.secret_configured == 'true'
-        continue-on-error: true  # Known issue: action fails to parse expireTime even when deployment succeeds
-        uses: FirebaseExtended/action-hosting-deploy@v0
+        uses: w9jds/firebase-action@v12.8.0
         with:
-          repoToken: ${{ secrets.GITHUB_TOKEN }}
-          firebaseServiceAccount: ${{ secrets.FIREBASE_SERVICE_ACCOUNT }}
-          projectId: groundctrl-c8860
-          channelId: pr-${{ github.event.pull_request.number }}-fix
+          args: hosting:channel:deploy pr-${{ github.event.pull_request.number }}-fix --project groundctrl-c8860
+        env:
+          FIREBASE_TOKEN: ${{ secrets.FIREBASE_TOKEN }}
       
       - name: Extract deployment URL
         id: extract_url
