--- a/.github/workflows/firebase-hosting-pull-request.yml
+++ b/.github/workflows/firebase-hosting-pull-request.yml
@@ -40,7 +40,7 @@ jobs:
         run: npm run build
         env:
           NODE_ENV: production
-          VITE_API_URL: https://groundctrl--groundctrl-c8860.us-central1.hosted.app/api/v1
+          VITE_API_URL: https://backend--pr-${{ github.event.pull_request.number }}-backend.groundctrl-c8860.web.app/api/v1
           VITE_FIREBASE_API_KEY: ${{ secrets.VITE_FIREBASE_API_KEY }}
           VITE_FIREBASE_AUTH_DOMAIN: ${{ secrets.VITE_FIREBASE_AUTH_DOMAIN }}
           VITE_FIREBASE_PROJECT_ID: ${{ secrets.VITE_FIREBASE_PROJECT_ID }}
@@ -70,6 +70,14 @@ jobs:
           firebaseServiceAccount: ${{ secrets.FIREBASE_SERVICE_ACCOUNT }}
           projectId: groundctrl-c8860
           channelId: pr-${{ github.event.pull_request.number }}-fix
+      
+      - name: Deploy Backend to Firebase App Hosting Preview
+        if: steps.check_secret.outputs.secret_configured == 'true'
+        run: |
+          npm install -g firebase-tools
+          firebase deploy --only apphosting:backend --channel pr-${{ github.event.pull_request.number }}-backend --project groundctrl-c8860
+        env:
+          FIREBASE_TOKEN: ${{ secrets.FIREBASE_TOKEN }}  # May need to generate a token or use service account
       
       - name: Extract deployment URL
         id: extract_url
