--- a/.github/workflows/firebase-hosting-pull-request.yml
+++ b/.github/workflows/firebase-hosting-pull-request.yml
@@ -74,8 +74,8 @@ jobs:
       - name: Deploy Backend to Firebase App Hosting Preview
         if: steps.check_secret.outputs.secret_configured == 'true'
         run: |
-          npm install -g firebase-tools
-          firebase deploy --only apphosting:backend --channel pr-${{ github.event.pull_request.number }}-backend --project groundctrl-c8860
+          npm install -g firebase-tools@latest
+          firebase apphosting:channel:deploy pr-${{ github.event.pull_request.number }}-backend --service backend --project groundctrl-c8860
         env:
           FIREBASE_TOKEN: ${{ secrets.FIREBASE_TOKEN }}  # May need to generate a token or use service account
       
