fix: make E2E tests only run when Firebase deployment actually succeeds

--- a/.github/workflows/firebase-hosting-pull-request.yml
+++ b/.github/workflows/firebase-hosting-pull-request.yml
@@ -75,9 +75,12 @@ jobs:
         id: extract_url
         if: steps.check_secret.outputs.secret_configured == 'true'
         run: |
-          # Set preview URL to the channel URL
-          echo "preview_url=https://groundctrl-c8860--pr-${{ github.event.pull_request.number }}-fix.web.app" >> $GITHUB_OUTPUT
-          echo "deployment_status=success" >> $GITHUB_OUTPUT
+          if [ "${{ steps.firebase_deploy.outputs.result }}" == "success" ]; then
+            echo "preview_url=https://groundctrl-c8860--pr-${{ github.event.pull_request.number }}-fix.web.app" >> $GITHUB_OUTPUT
+            echo "deployment_status=success" >> $GITHUB_OUTPUT
+          else
+            echo "deployment_status=failed" >> $GITHUB_OUTPUT
+          fi
       
       - name: Install Playwright browsers (for E2E tests)
         if: steps.check_secret.outputs.secret_configured == 'true' && steps.extract_url.outputs.deployment_status == 'success'
