--- a/frontend/package.json
+++ b/frontend/package.json
@@ -65,6 +65,7 @@
     "react-dom": "^19.2.4",
     "react-helmet-async": "^2.0.5",
     "react-hook-form": "^7.71.1",
+    "react-is": "^19.2.4",
     "react-resizable-panels": "^4.6.2",
     "react-router-dom": "^7.13.0",
     "recharts": "^3.7.0",
