--- a/backend/package.json
+++ b/backend/package.json
@@ -22,6 +22,10 @@
     "lint": "biome check src",
     "lint:fix": "biome check src --write",
     "seed": "node seeders/seed.js",
+    "seed:all": "node seeders/seed.js --all",
+    "seed:leaderboard": "node seeders/seed.js --leaderboard",
+    "seed:tutorials": "node seeders/seed.js --tutorials",
+    "seed:scenarios": "node seeders/seed.js --scenarios",
     "cleanup": "node src/scripts/FB_cleanup.js",
     "test:verify-migration": "node tests/scripts/verify-migration.js",
     "test:migrate": "bash tests/scripts/migrate-from-tests-backend.sh"
