--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -1,6 +1,9 @@
 # API Configuration
-# For local development, use localhost:8080
-# For production, use your production API URL
+# VITE_API_URL: Base URL for WebSockets and some auth endpoints (no /api/v1 suffix)
+# VITE_API_BASE_URL: Base URL for REST API calls (includes /api/v1 suffix)
+# 
+# Development: localhost:8080
+# Production: api.missionctrl.org
 VITE_API_URL=http://localhost:8080
 VITE_API_BASE_URL=http://localhost:8080/api/v1
 
