Fix CI: Remove problematic Microsoft package repositories

--- a/.github/workflows/frontend-e2e-tests.yml
+++ b/.github/workflows/frontend-e2e-tests.yml
@@ -73,6 +73,12 @@ jobs:
           echo "Backend is responding, waiting extra 5 seconds for full initialization..."
           sleep 5
       
+      - name: Remove problematic Microsoft repositories
+        run: |
+          sudo rm -f /etc/apt/sources.list.d/microsoft-prod.list
+          sudo rm -f /etc/apt/sources.list.d/azure-cli.list
+          sudo apt-get update || true
+      
       - name: Install Playwright browsers
         working-directory: ./frontend
         run: npx playwright install --with-deps
